envoy.json
{
    "listeners": [
      {
        "address": "tcp://0.0.0.0:80",
        "filters": [
          {
            "type": "read",
            "name": "http_connection_manager",
            "config": {
              "access_log": [
                {
                  "path": "/dev/stdout"
                }
              ],
              "codec_type": "auto",
              "stat_prefix": "ingress_http",
              "route_config": {
                "virtual_hosts": [
                  {
                    "name": "backend",
                    "domains": ["cloud-native-app.default.svc.cluster.local"],
                    "routes": [
                      {
                        "timeout_ms": 0,
                        "prefix": "/",
                        "cluster": "cloud-native-app.default.svc.cluster.local"
                      }
                    ]
                  }
                ]
              },
              "filters": [
                {
                  "type": "decoder",
                  "name": "router",
                  "config": {}
                }
              ]
            }
          }
        ]
      }
    ],
    "admin": {
      "access_log_path": "/dev/stdout",
      "address": "tcp://0.0.0.0:8001"
    },
    "cluster_manager": {
      "clusters": [
        {
          "name": "cloud-native-app.default.svc.cluster.local",
          "connect_timeout_ms": 250,
          "type": "sds",
          "lb_type": "round_robin",
          "service_name": "cloud-native-app.default.svc.cluster.local"
        }
      ],
      "sds": {
        "cluster": {
          "name": "kubernetes_sds",
          "type": "logical_dns",
          "connect_timeout_ms": 250,
          "lb_type": "round_robin",
          "hosts": [
            {"url": "tcp://kubernetes-envoy-sds:80"}
          ]       
        },
        "refresh_delay_ms": 1000
      }
    }
  }
